--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.amazonaws.glue</groupId>
   <artifactId>aws-glue-datacatalog-hive-client</artifactId>
-  <version>1.10.0-aiq6</version>
+  <version>1.10.0-aiq7</version>
     <modules>
       <module>aws-glue-datacatalog-client-common</module>
       <module>aws-glue-datacatalog-spark-client</module>
@@ -21,7 +21,7 @@
     <guava.version>20.0</guava.version>
     <hive2.version>2.3.3</hive2.version>
     <!-- https://github.com/ActionIQ-OSS/hive -->
-    <spark-hive.version>1.2.1.spark2-aiq11</spark-hive.version>
+    <spark-hive.version>1.2.1.spark2-aiq12</spark-hive.version>
     <aws.sdk.version>1.11.1034</aws.sdk.version>
     <junit.version>4.11</junit.version>
     <mockito.version>1.10.19</mockito.version>
@@ -112,6 +112,17 @@
     </pluginRepository>
   </pluginRepositories>
 
+  <distributionManagement>
+    <repository>
+      <id>aws-releases</id>
+      <url>s3://aiq-artifacts/releases</url>
+    </repository>
+    <snapshotRepository>
+      <id>aws-snapshots</id>
+      <url>s3://aiq-artifacts/snapshots</url>
+    </snapshotRepository>
+  </distributionManagement>
+
   <build>
     <extensions>
       <extension>
@@ -119,7 +130,27 @@
         <artifactId>aws-maven</artifactId>
         <version>5.0.0.RELEASE</version>
       </extension>
+      <extension>
+        <groupId>com.github.seahen</groupId>
+        <artifactId>maven-s3-wagon</artifactId>
+        <version>1.3.3</version>
+      </extension>
     </extensions>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
